--- a/source/Fasciculus.Svg/Fasciculus.Svg.csproj
+++ b/source/Fasciculus.Svg/Fasciculus.Svg.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
     <ProjectReference Include="../Fasciculus.Xml/Fasciculus.Xml.csproj" />
   </ItemGroup>
 
