redesigned blog and its preview

--- a/source/Fasciculus.Blog.Preview/Fasciculus.Blog.Preview.csproj
+++ b/source/Fasciculus.Blog.Preview/Fasciculus.Blog.Preview.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
+    <ProjectReference Include="../Fasciculus.Svg/Fasciculus.Svg.csproj" />
   </ItemGroup>
 
 </Project>
