--- a/source/Fasciculus.Blog/Fasciculus.Blog.csproj
+++ b/source/Fasciculus.Blog/Fasciculus.Blog.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
+    <ProjectReference Include="../Fasciculus.Svg/Fasciculus.Svg.csproj" />
   </ItemGroup>
 
   <ItemGroup>
