--- a/source/Fasciculus.Markdown/Fasciculus.Markdown.csproj
+++ b/source/Fasciculus.Markdown/Fasciculus.Markdown.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Markdown.ColorCode/Fasciculus.Markdown.ColorCode.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown.Svg/Fasciculus.Markdown.Svg.csproj" />
   </ItemGroup>
 
