--- a/source/Fasciculus.Markdown.Tests/Fasciculus.Markdown.Tests.csproj
+++ b/source/Fasciculus.Markdown.Tests/Fasciculus.Markdown.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="MSTest.TestAdapter" />
     <PackageReference Include="MSTest.TestFramework" />
@@ -14,6 +15,10 @@
     <ProjectReference Include="../Fasciculus.Testing/Fasciculus.Testing.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
     <ProjectReference Include="../Fasciculus.Svg/Fasciculus.Svg.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Resources/FrontMatter.Test1.md" LogicalName="FrontMatter.Test1" />
   </ItemGroup>
 
 </Project>
