fixed service name clanch with namespace

--- a/source/Fasciculus.Markdown.FrontMatter/Fasciculus.Markdown.FrontMatter.csproj
+++ b/source/Fasciculus.Markdown.FrontMatter/Fasciculus.Markdown.FrontMatter.csproj
@@ -5,12 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="YamlDotNet" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown.Core/Fasciculus.Markdown.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Yaml/Fasciculus.Yaml.csproj" />
   </ItemGroup>
 
 </Project>
