renamed BlogContent to BlogSiteContent

--- a/source/Fasciculus.Site/Fasciculus.Site.csproj
+++ b/source/Fasciculus.Site/Fasciculus.Site.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj" />
+    <ProjectReference Include="../Fasciculus.Docs.Content/Fasciculus.Docs.Content.csproj" />
     <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
     <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
