--- a/source/Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj
+++ b/source/Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net9.0</TargetFrameworks>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
