preparing to generate static resources

--- a/source/Fasciculus.Site/Fasciculus.Site.csproj
+++ b/source/Fasciculus.Site/Fasciculus.Site.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
     <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
     <ProjectReference Include="../Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj" />
+    <ProjectReference Include="../Fasciculus.Web.Resources/Fasciculus.Web.Resources.csproj" />
   </ItemGroup>
 
 </Project>
