--- a/source/Fasciculus.Docs.Preview/Fasciculus.Docs.Preview.csproj
+++ b/source/Fasciculus.Docs.Preview/Fasciculus.Docs.Preview.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
+    <ProjectReference Include="../Fasciculus.Site.Resources/Fasciculus.Site.Resources.csproj" />
     <ProjectReference Include="../Fasciculus.Svg/Fasciculus.Svg.csproj" />
     <ProjectReference Include="../Fasciculus.Web.Resources/Fasciculus.Web.Resources.csproj" />
   </ItemGroup>
