--- a/source/Fasciculus.Site.Resources/Fasciculus.Site.Resources.csproj
+++ b/source/Fasciculus.Site.Resources/Fasciculus.Site.Resources.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <OutputType>Library</OutputType>
+    <RootNamespace>Fasciculus.Site</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,8 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Bootstrap/**/*" />
-    <EmbeddedResource Include="Katex/**/*" />
+    <EmbeddedResource Include="Resources/**/*" />
   </ItemGroup>
 
 </Project>
