--- a/source/Fasciculus.Site/Fasciculus.Site.csproj
+++ b/source/Fasciculus.Site/Fasciculus.Site.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
     <ProjectReference Include="../Fasciculus.Markdown/Fasciculus.Markdown.csproj" />
     <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
+    <ProjectReference Include="../Fasciculus.Site.Resources/Fasciculus.Site.Resources.csproj" />
     <ProjectReference Include="../Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj" />
     <ProjectReference Include="../Fasciculus.Web.Resources/Fasciculus.Web.Resources.csproj" />
   </ItemGroup>
