--- a/source/Fasciculus.IO/Properties/Description.props
+++ b/source/Fasciculus.IO/Properties/Description.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Description>
       This package provides:
+      - binary I/O
       See the README for more information.
     </Description>
   </PropertyGroup>
