--- a/source/Fasciculus.Mathematics/Properties/Description.props
+++ b/source/Fasciculus.Mathematics/Properties/Description.props
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <Project>
 
   <PropertyGroup>
     <Description>
-      This package includes a bunch of mathematical utilities:
-      - Linear Algebra
+      This package provides:
+      - Sparse vectors and sparse matrices
+      - Bit set
       See the README for more information.
     </Description>
   </PropertyGroup>
