--- a/source/Fasciculus.Mathematics/Fasciculus.Mathematics.csproj
+++ b/source/Fasciculus.Mathematics/Fasciculus.Mathematics.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0;net9.0</TargetFrameworks>
     <RootNamespace>Fasciculus.Mathematics</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <Import Project="Properties/Description.props" />
@@ -22,10 +23,6 @@
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
     <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="LinearAlgebra\" />
   </ItemGroup>
 
 </Project>
