removed AllowUnsafeBlocks from all projects

--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0</TargetFrameworks>
     <RootNamespace>Fasciculus</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <Import Project="Properties/Description.props" />
