--- a/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
+++ b/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
     <ProjectReference Include="../Fasciculus.Steam/Fasciculus.Steam.csproj" />
     <ProjectReference Include="../Fasciculus.Maui/Fasciculus.Maui.csproj" />
   </ItemGroup>
