--- a/source/Fasciculus.NuGet.Tests/Fasciculus.NuGet.Tests.csproj
+++ b/source/Fasciculus.NuGet.Tests/Fasciculus.NuGet.Tests.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
     <ProjectReference Include="../Fasciculus.Nuget/Fasciculus.Nuget.csproj" />
     <ProjectReference Include="../Fasciculus.Testing/Fasciculus.Testing.csproj" />
   </ItemGroup>
