--- a/source/Fasciculus.Assets/Fasciculus.Assets.csproj
+++ b/source/Fasciculus.Assets/Fasciculus.Assets.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
   </ItemGroup>
 
 </Project>
