--- a/source/Fasciculus.Xml.Tests/Fasciculus.Xml.Tests.csproj
+++ b/source/Fasciculus.Xml.Tests/Fasciculus.Xml.Tests.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
     <ProjectReference Include="../Fasciculus.Testing/Fasciculus.Testing.csproj" />
     <ProjectReference Include="../Fasciculus.Xml/Fasciculus.Xml.csproj" />
   </ItemGroup>
