changed return type of FileSystemInfoExtensions.RelativeTo

--- a/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
+++ b/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
     <ProjectReference Include="../Fasciculus.Html/Fasciculus.Html.csproj" />
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
     <ProjectReference Include="../Fasciculus.Xml/Fasciculus.Xml.csproj" />
   </ItemGroup>
 
