--- a/source/Fasciculus.NetStandard/Properties/Description.props
+++ b/source/Fasciculus.NetStandard/Properties/Description.props
@@ -3,6 +3,8 @@
 
   <PropertyGroup>
     <Description>
+      Source code files for:
+      - DisallowNullAttribute
       See the README for more information.
     </Description>
   </PropertyGroup>
