added build properties

--- a/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
+++ b/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="build/*" Pack="true" PackagePath="/build" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="DisallowNullAttribute.cs" />
   </ItemGroup>
   
