testing Fasciculus.NetStandard

--- a/source/Fasciculus.NetStandard.Testee/Fasciculus.NetStandard.Testee.csproj
+++ b/source/Fasciculus.NetStandard.Testee/Fasciculus.NetStandard.Testee.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Fasciculus.NetStandard/Fasciculus.NetStandard.csproj" />
+    <Compile Include="../Fasciculus.NetStandard/*.cs" Visible="false" />
   </ItemGroup>
-
-  <Import Project="../Fasciculus.NetStandard/build/Fasciculus.NetStandard.props"/>
 
 </Project>
