--- a/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
+++ b/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
@@ -14,8 +14,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" />
+    <Compile Include="../Fasciculus.NetStandard/*.cs" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
