--- a/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
+++ b/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Content Include="DisallowNullAttribute.cs" />
+    <Compile Include="NotNullWhenAttribute.cs" />
   </ItemGroup>
   
 </Project>
