--- a/source/Fasciculus.NetStandard.Testee/Fasciculus.NetStandard.Testee.csproj
+++ b/source/Fasciculus.NetStandard.Testee/Fasciculus.NetStandard.Testee.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Memory" />
     <Compile Include="../Fasciculus.NetStandard/*.cs" Visible="false" />
   </ItemGroup>
 
