--- a/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
+++ b/source/Fasciculus.NetStandard/Fasciculus.NetStandard.csproj
@@ -17,6 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Memory" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
     <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
@@ -26,8 +30,11 @@
   </ItemGroup>
 
   <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="DisallowNullAttribute.cs" />
-    <Compile Include="NotNullWhenAttribute.cs" />
+    <Content Include="NotNullWhenAttribute.cs" />
   </ItemGroup>
   
 </Project>
