--- a/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
+++ b/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" />
-    <Compile Include="../Fasciculus.NetStandard/*.cs" Visible="false" />
+    <Compile Include="../Fasciculus.NetStandard.Attributes/*.cs" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
