--- a/source/Fasciculus.Text/Fasciculus.Text.csproj
+++ b/source/Fasciculus.Text/Fasciculus.Text.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <Compile Include="../Fasciculus.NetStandard/*.cs" Visible="false" />
+    <Compile Include="../Fasciculus.NetStandard.Attributes/*.cs" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
