--- a/source/Fasciculus.CodeAnalysis.Tests/Fasciculus.CodeAnalysis.Tests.csproj
+++ b/source/Fasciculus.CodeAnalysis.Tests/Fasciculus.CodeAnalysis.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(FasciculusDotNetTfm)</TargetFrameworks>
+    <TargetFrameworks>net9.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
