--- a/source/Fasciculus.Testing/Fasciculus.Testing.csproj
+++ b/source/Fasciculus.Testing/Fasciculus.Testing.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;$(FasciculusDotNetTfm);$(FasciculusPlatforms)</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net9.0;net9.0-windows10.0.19041.0;</TargetFrameworks>
     <RootNamespace>Fasciculus</RootNamespace>
   </PropertyGroup>
 
@@ -12,5 +12,5 @@
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
   </ItemGroup>
-
+  
 </Project>
