--- a/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
+++ b/source/Fasciculus.Algorithms/Fasciculus.Algorithms.csproj
@@ -14,9 +14,10 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
+  <Import Project="../Fasciculus.NetStandard.Attributes/local/Fasciculus.NetStandard.Attributes.props"/>
+
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" />
-    <Compile Include="../Fasciculus.NetStandard.Attributes/*.cs" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
